vertical align pofo pagination, LESS SQSP fix ~""

--- a/style.less
+++ b/style.less
@@ -2338,7 +2338,7 @@ h1.automatic-sub-page-title.jsonContentLoadedFadeIn{
     
     // position vertically approximately where the last "Next steps" section is
     position: relative;
-    top: calc(-30px - 4vw) !important;
+    top: ~"calc(-30px - 4vw)" !important;
   }
   
 }
